--- a/Others/contact.html
+++ b/Others/contact.html
@@ -5,8 +5,8 @@
     <title>CONTACT US</title>
 
 </head>
-<body> <center>
-     <h1 style="color: blue;"> OUR CONTACT </h1><br>
+<body> 
+     <h1 style="color: blue;"><i>OUR CONTACT</i>  </h1><br>
 
 
         <p><i>You can contact us directly with the following contacts below.</i></p>
@@ -18,7 +18,7 @@
 
     <h4 style="color: blue;">EMAIL</h4>
     <p>etinyeneededem07@gmail.com</p><br><br>
-</center>
+
     <P>Click <a href="about.html">HERE</a> to see the about page</P>
 
    
